# hermes

./: LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  crud.py  database.py  main.py  pyproject.toml  schemas.py  services.py  signatures.py  start.sh
backend/crud/: notes.py  reminders.py
backend/models/: models.py  pydantic.py
backend/services/: chat_service.py  note_service.py  vector_store.py
backend/utils/: config.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.tsx
frontend/src/api/: chat.ts  notes.ts  reminders.ts
frontend/src/components/: Chatbot.css  Chatbot.tsx  NavigationPanel.css  NavigationPanel.tsx  NotesScroll.css  NotesScroll.tsx  Reminders.css  Reminders.tsx
frontend/src/hooks/: useChat.ts  useReminders.ts
frontend/src/types/: chat.ts  note.ts  reminder.ts
public/: index.html
