[tool.poetry]
name = "hermes"
version = "0.1.0"
description = ""
authors = ["Adrian Michalski <adrian.michalski@owleye.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
fastapi-cors = "^0.0.6"
dspy-ai = "^2.5.14"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
langchain-community = "^0.3.3"
sse-starlette = "^2.1.3"
chromadb = "^0.5.15"
semantic-chunkers = "^0.0.10"
semantic-router = "0.0.68"
langchain-chroma = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"